--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^5"
+        "phpunit/phpunit": "^5",
+        "doctrine/instantiator": "~1.0.2"
     },
     "autoload": {
     	"psr-4": {
