--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^5",
-        "doctrine/instantiator": "~1.0.2"
+        "phpunit/phpunit": "^5"
     },
     "autoload": {
     	"psr-4": {
     		"drmonkeyninja\\": "src/"
     	}
+    },
+    "config": {
+        "platform": {
+            "php": "5.6.40"
+        }
     }
 }
